# bip39-solana-wallet

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: main.tsx  state.ts  tauri-types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  encryption.rs  lib.rs  main.rs  state.rs
src-tauri/src/solana/: mnemonic.rs  mod.rs  seed.rs  transaction.rs  wallet.rs
src/app/: cli.rs  transaction_manager.rs
src/components/: Nav.tsx
src/pages/: CreateWallet.tsx  ImportWallet.tsx  Landing.tsx  Login.tsx  WalletDashboard.tsx
src/solana/: mod.rs  spl_token.rs
tests/commands/: mod.rs  spl_test.rs
